--- a/北京/八达岭/八达岭旅游攻略.md
+++ b/北京/八达岭/八达岭旅游攻略.md
@@ -49,6 +49,11 @@
 * 时间：长陵——八达岭 时间:09:30-17:30
 * 时间：八达岭——长陵 时间08:00-16:00
 
+### 地铁路线
+* 从你所在地乘车达到霍营站
+* 出霍营站右拐行走2分钟左右到底黄土店站
+* 在黄土店站买票或刷公交卡到八达岭站 
+* 按照指示达到长城  
 ## 四：电子导游讲解服务
 * 使用费：中文20元/次  英文40元/次
 * 押金：30元/台
