--- a/北京/八达岭/八达岭旅游攻略.md
+++ b/北京/八达岭/八达岭旅游攻略.md
@@ -27,7 +27,7 @@
 
 ## 三：交通
 
-### 公交路线  
+### 3.1 公交路线  
 #### 919大站快车(德胜门-延庆)   
 * 票价： 刷卡8.5元 买票17元 
 * 车次：20分钟一趟
@@ -49,7 +49,7 @@
 * 时间：长陵——八达岭 时间:09:30-17:30
 * 时间：八达岭——长陵 时间08:00-16:00
 
-### 地铁路线
+### 3.2 地铁路线
 * 从你所在地乘车达到霍营站
 * 出霍营站右拐行走2分钟左右到底黄土店站
 * 在黄土店站买票或刷公交卡到八达岭站 
